--- a/qlthucung/appsettings.json
+++ b/qlthucung/appsettings.json
@@ -8,6 +8,16 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AppDb": "Data Source=DUONGHA\\DUONGHA;Initial Catalog=petstore;Integrated Security=True"
-  }
+    "AppDb": "Data Source=DESKTOP-K1FUUMR\\SQLEXPRESS;Initial Catalog=petstore;Integrated Security=True"
+  },
+  "Vnpay": {
+    "TmnCode": "JETK4RAK",
+    "HashSecret": "JCVZ7H167Q8EZWTLYUZQKHB4K0RQGCOK",
+    "BaseUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "Command": "pay",
+    "CurrCode": "VND",
+    "Version": "2.1.0",
+    "Locale": "vn"
+  },
+  "TimeZoneId": "SE Asia Standard Time" // If do not us Windown OS change it to: Asia/Bangkok
 }
