--- a/qlthucung/appsettings.json
+++ b/qlthucung/appsettings.json
@@ -10,6 +10,7 @@
   "ConnectionStrings": {
     "AppDb": "Data Source=DESKTOP-K1FUUMR\\SQLEXPRESS;Initial Catalog=petstore;Integrated Security=True"
   },
+
   "Vnpay": {
     "TmnCode": "JETK4RAK",
     "HashSecret": "JCVZ7H167Q8EZWTLYUZQKHB4K0RQGCOK",
@@ -19,5 +20,13 @@
     "Version": "2.1.0",
     "Locale": "vn"
   },
-  "TimeZoneId": "SE Asia Standard Time" // If do not us Windown OS change it to: Asia/Bangkok
+  "TimeZoneId": "SE Asia Standard Time", // If do not us Windown OS change it to: Asia/Bangkok
+
+  "SmtpSettings": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "EnableSSL": true,
+    "UserName": "duongha782003@gmail.com",
+    "Password": "mmky ajyr jgch ynya"
+  }
 }
