commit sp excel, sp

--- a/qlthucung/appsettings.json
+++ b/qlthucung/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AppDb": "Data Source=DESKTOP-K1FUUMR\\SQLEXPRESS;Initial Catalog=petstore;Integrated Security=True"
+    "AppDb": "Data Source=DESKTOP-K1FUUMR\\SQLEXPRESS;Initial Catalog=petstore;Integrated Security=True; TrustServerCertificate=True"
   },
 
   "Vnpay": {
