--- a/qlthucung/appsettings.json
+++ b/qlthucung/appsettings.json
@@ -28,5 +28,9 @@
     "EnableSSL": true,
     "UserName": "duongha782003@gmail.com",
     "Password": "mmky ajyr jgch ynya"
+  },
+
+  "GoogleAI": {
+    "ApiKey": "AIzaSyDL9_IHgX9ZnEm8jeKl-q-XOhKV1wXI8tM"
   }
 }
