--- a/qlthucung/qlthucung.csproj
+++ b/qlthucung/qlthucung.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google_GenerativeAI" Version="3.3.0" />
     <PackageReference Include="jQuery" Version="3.7.1" />
     <PackageReference Include="Microsoft.AspNet.SignalR.Core" Version="2.4.3" />
     <PackageReference Include="Microsoft.AspNet.SignalR.JS" Version="2.4.3" />
